# Kasper

./: .gitmodules
.github/workflows/: build-apk.yml
admin/: .gitignore  Dockerfile  liara.json  next.config.js  package-lock.json  package.json  vercel.json
admin/app/: layout.tsx  page.tsx
admin/components/: icons.tsx  navbar.tsx
admin/menus/: index.tsx
admin/styles/: globals.css
admin/types/: index.ts
admin/utils/: index.ts
app-ide/: Dockerfile
app-ide/client-app/: package-lock.json
applet/wasm/: temp.txt
applet/widget/: clock.js  clock.old.js  index.html  tes.js
client/cli/: index.js  index.ts  package-lock.json  package.json  tsconfig.json
client/web/: .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  manifest.json  oauthsuccess.html  version.json
client/web2/: index.html  package-lock.json  package.json
docs/: Midopia.postman_collection.json  Sigma.postman_collection.json
machines/elpis/: sample.js
node/: .gitignore  Dockerfile  README.md  backuper.sh  build.sh  go.mod  install-fcvmm-2.sh  main.cpp  main.go  notes.txt  run.sh  sample.env  test.sh
node.old/: Dockerfile  go.mod  main.cpp  main.go  sample.env
node/appengine/: Cargo.toml
node/appengine/appletdb/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007  OPTIONS-000009
node/appengine/src/: main.rs
node/builder/: pluggergen.go  run.sh
node/demo/: makefile
node/docker/: makefile
node/scripts/: -H  -s  build-conf.sh  dump  install-questdb.sh  join.sh  nginx-selfsigned.crt  nginx-selfsigned.key  prepare-testnet.sh  run-questdb.sh  (+3 more)
payment/: .gitignore  index.js  package-lock.json  package.json
tgbot/: index.js  package-lock.json  package.json
(+886 files in other folders)
